The MarketHealth table frame is shown immediately (without numbers) even at DOMContentLoaded time. And later, it is filled with data as it arrives. A sound UI logic. This avoid UI blinking at load and later shifting HTML elements under the table downwards.

--- a/src/WebServer/SqCoreWeb/projects/MarketDashboard/src/app/market-health/market-health.component.scss
+++ b/src/WebServer/SqCoreWeb/projects/MarketDashboard/src/app/market-health/market-health.component.scss
@@ -16,7 +16,6 @@
 }
 .dashboardTopCont .leftDiv {
   float:left;
-  visibility: hidden;
 }
 
 .dashboardTopCont table{
